# audiobook-dl

./: README.md  TESTING_IMPLEMENTATION_SUMMARY.md  TEST_PLAN.md  pyproject.toml
audiobookdl/assets/errors/: book_access.txt
audiobookdl/sources/: nextory.py
tests/: conftest.py  test_authentication.py  test_config.py  test_download.py  test_encryption.py  test_exceptions.py  test_ffmpeg.py  test_metadata.py  test_urls.py
