[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobook-dl"
authors = [
    { name = "Joakim Holm", email = "mail@joakimholm.xyz" }
]
description = "CLI tool for downloading audiobooks from online sources"
readme = "README.md"
keywords = ["audiobooks", "cli", "downloader"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "platformdirs",
    "attrs",
    "cssselect",
    "importlib-resources",
    "lxml",
    "m3u8",
    "mutagen",
    "pillow",
    "pycountry",
    "pycryptodome",
    "requests",
    "rich",
    "tomli",
    "urllib3>=2",
]
requires-python = ">=3.9"
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
    "pytest-timeout>=2.1.0",
]

[project.urls]
"Homepage" = "https://github.com/jo1gi/audiobook-dl"
"Bugtracker" = "https://github.com/jo1gi/audiobook-dl/issues"

[project.scripts]
audiobook-dl = "audiobookdl.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "audiobookdl.__version__"}

[tool.setuptools.package-data]
audiobookdl = ["*.txt"]

[tool.mypy]
ignore_missing_imports = true
allow_untyped_globals = false
disallow_untyped_calls = true

[[tool.mypy.overrides]]
module = [
    "audiobookdl.sources.*",
    "audiobookdl.output.metadata.id3",
    "audiobookdl.output.metadata.mp4"
]
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=audiobookdl",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "requires_ffmpeg: Tests that require FFmpeg installed",
]
timeout = 300

[tool.coverage.run]
source = ["audiobookdl"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
